--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -75,5 +75,10 @@ logging:
     org.springframework: INFO
     org.hibernate: DEBUG
     root: INFO
-  pattern: 
+  pattern:
     console:  '%clr(%d{${LOG_DATEFORMAT_PATTERN:-yyyy-MM-dd HH:mm:ss.SSS}}){faint} %clr(${LOG_LEVEL_PATTERN:-%5p}) %clr(${PID:- }){magenta} %clr(---){faint} %clr([%15.15t]){faint} %clr(%-40.40logger{39}){cyan} %clr(:){faint} %m%n${LOG_EXCEPTION_CONVERSION_WORD:-%wEx}'
+    file: '%d{yyyy-MM-dd HH:mm:ss.SSS} - ${PID} - [%thread] - %-5level - %logger{50} - %msg%n'
+  file:
+    path: '${LOG_PATH: /service/logs/rabbitmq_producer/}'
+    max-history: 30
+    max-size: 1MB
